# GooFish-AIMonitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
config/: watchlist.yaml
deploy/: com.xianyu.console.plist  com.xianyu.crawler.plist  run.sh  secret.env.example  serve.sh
docs/: RELEASE.md  release-notes.md
docs/superpowers/plans/: 2026-06-13-xianyu-crawler.md
docs/superpowers/specs/: 2026-06-13-xianyu-crawler-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css  util.js
packaging/: appicon.icns  build_macos.sh  build_windows.ps1  copy_browsers.py  goofish.iss  goofish.spec  make_dmg.sh  make_icon.py  sign_macos.sh
scripts/: discover_favorites.py  discover_search.py  login.py  migrate_db.py
src/xianyu_crawler/: __init__.py  anti_detect.py  cli.py  config.py  discover.py  favorite.py  favorites_list.py  filter.py  launcher.py  liveness.py  models.py  notifier.py  parsing.py  pipeline.py  price_monitor.py  review.py  search.py  service.py  session.py
tests/: test_anti_detect.py  test_api.py  test_cli_smoke.py  test_config.py  test_console_storage.py  test_favorites_parse.py  test_filter.py  test_liveness.py  test_models.py  test_notifier.py  test_parsing.py  test_pipeline.py  test_price_monitor.py  test_repo.py  test_review.py  test_scheduler.py  test_search_parse.py  test_service.py  test_session.py
tests/fixtures/: favorites.sample.json  search.sample.json
(+16 files in other folders)
