[project]
name = "xianyu-crawler"
version = "0.1.4"
description = "定时登录闲鱼: 按条件搜索→自动想要收藏, 并监控收藏降价, 邮件/CSV 通知"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.45",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pywebview>=5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
xianyu = "xianyu_crawler.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]
include = ["src", "tests", "scripts"]
